static/css/stylesheet.css
.navbar {
  padding: 0.8em;
  box-shadow: 0 .25rem 1rem rgba(48,55,66,.15);
  z-index:0;
  background:#2d3e50;
}

.activity-image {
  border-radius:50%;
}

.avatar.avatar-xxl {
  font-size:3.2rem;
  height:6.4rem;
  width:6.4rem;
}

.profile-field {
  padding-bottom: 3%;
}

.index-tile {
  padding:1.2%;
  margin-top:1%;
  box-shadow: 0 .25rem 1rem rgba(48,55,66,.15);
}

.index-tile:hover {
  box-shadow: 0 0.4rem 1.2rem rgba(48,55,66,.15);
}

.card, .panel {
  z-index:1;
  box-shadow: 0 .25rem 1rem rgba(48,55,66,.15);
}

.stats-body {
  line-height: 1.8vw;
}

.template {
  margin: 0.3%;
}

.tile-title, .tile-subtitle {
  margin-left:2%;
}

.stats-header {
  font-size: 1.2vw;
  font-weight: 500;
}

.stats {
  margin-left:2%;
  font-size: 0.8rem;
}

#map {
  height:100%;
  width:100%;
  top:0;
  left:0;
}
.container {
  padding-left: 2%;
  padding-right: 2%;
  padding-top: 1%;
}

#activities_wrapper {
  padding-bottom: 2%;
}

#activities, #activities_wrapper, .plot {
  height:auto;
}

#previews {
  text-align: center;
}

#previews .template.dz-success .progress-bar {
  opacity: 0;
  transition: opacity 0.3s linear;
}

#previews .template.dz-success .upload-success {
  opacity: 1;
  transition: opacity 0.3s linear;
}

#previews .template.dz-error .upload-error {
  opacity: 1;
  transition: opacity 0.3s linear;
}

.upload-success, .upload-error {
  opacity: 0;
}

.my-3 {
  margin-top:2% !important;
  margin-bottom: 2% !important;
}

.note {
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;  
  overflow: hidden;
}

html, .panel, .container, .stats {
  height:100%;
}

body {
  height:90%;
}

